grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - [AKS EXTERNAL URL]
    secretName: tls-secret
  rules:
  - host: [AKS EXTERNAL URL]
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /grafana(/|$)(.*)
